Merge Fixed